fixed styles not showing problem

--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -83,7 +83,7 @@ body {
 // Re-used
 // ===============
 
-.grey-hover &:hover {
+.grey-hover:hover {
 	background-color: $grey-light;
 }
 
@@ -93,6 +93,7 @@ body {
 
 header {
 	@include flexCenter();
+	justify-content: space-between;
 	height: 3rem;
 	width: 100%;
 	padding: 0 1rem;
@@ -112,8 +113,9 @@ header {
 				cursor: pointer;
 				border-radius: 5px;
 			}
-
+            
 			div.nav-item {
+                padding: 0 0.75rem;
 				position: relative;
 				i {
 					margin-left: 0.5rem;
@@ -125,7 +127,7 @@ header {
 				width: 4rem;
 				background-repeat: no-repeat;
 				background-size: contain;
-				background-image: url(../assets/logo-gif.gif);
+				background-image: url(../assets/logo-light.png);
 			}
 		}
 
